testsuite/tests/typecheck/should_compile/tc021.hs
module ShouldSucceed where

f x = a

a = (x,x)

x = x
