testsuite/tests/typecheck/should_fail/tcfail054.hs
module ShouldFail where

f (B a) = True
